# SparkTaxiInsights

./: .gitignore  README.md  pyproject.toml  requirements.txt
crawling/: create_log.py  page_source.py  parse.py
docker/: spark-cluster.yml
resource/: f_volume.txt  high_volume.txt  text.txt  yello_volume.txt
sparkAnaliysis/: data_total_length.py  year_datetime.py
sparkAnaliysis/jupyter_trips/: data_null_checking.ipynb  null_checking.ipynb  spark_null_checking.ipynb  taxi_pickup.ipynb  total_data.ipynb  year_trip_total.ipynb
sparkAnaliysis/utils/: data_total_length.py  util.py
