[tool.poetry]
name = "spark-kafka-distribute"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pyspark = "3.3.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
bs4 = "^0.0.2"
seaborn = "^0.13.2"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
pyarrow = "^16.0.0"
lxml = "^5.2.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
